# choices

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  documentation.md  releasing.md
.github/workflows/: rust.yaml
choices-derive/: Cargo.toml
choices-derive/src/: attributes.rs  constants.rs  index.rs  lib.rs  util.rs  warp.rs
examples/: README.md  change_config.rs  configure_root_message.rs  configure_root_path.rs  custom_warp_server.rs  json.rs  on_set.rs  simple_readonly.rs  user_type.rs  user_type_json.rs  validator.rs
src/: error.rs  lib.rs  serde.rs  serializer.rs
tests/: custom_server.rs  get.rs  hide.rs  list.rs  on_set.rs  put.rs  root_message.rs  root_path.rs  rw_mutex.rs  user_type.rs  util.rs  validation.rs
tests/json/: get.rs  list.rs  main.rs  put.rs  skip.rs  user_type.rs
tests/text/: get.rs  list.rs  main.rs  put.rs  skip.rs  user_type.rs
utilities/: Cargo.toml  README.md
utilities/src/: configs.rs  constants.rs  lib.rs  test_cases.rs
