[package]
name = "choices"
version = "0.1.1"
authors = ["Trisfald <trisfald@gmail.com>"]
description = "HTTP configuration service by defining a struct."
documentation = "https://docs.rs/choices"
repository = "https://github.com/trisfald/choices"
keywords = ["configuration", "derive", "http"]
categories = ["web-programming"]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
choices-derive = { path = "choices-derive", version = "=0.1.1" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
bytes = "1.0"

[dev-dependencies]
lazy_static = "1.4"
reqwest = "0.11"
rand = "0.8"
