[package]
name = "choices"
version = "0.1.1"
authors = ["Trisfald <trisfald@gmail.com>"]
description = "HTTP configuration service by defining a struct."
documentation = "https://docs.rs/choices"
repository = "https://github.com/trisfald/choices"
keywords = ["configuration", "derive", "http"]
categories = ["web-programming"]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[features]
default = []
json = ["serde", "serde_json", "choices-derive/json"]

[dependencies]
choices-derive = { path = "choices-derive", version = "=0.1.1" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
bytes = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
util = { path = "utilities" }
lazy_static = "1.4"
reqwest = "0.11"

[[example]]
name = "json"
required-features = ["json"]

[[test]]
name = "json"
path = "tests/json/main.rs"
required-features = ["json"]
