[workspace]
members = ["choices-derive", "utilities"]

[workspace.package]
version = "1.0.0"
authors = ["Trisfald <trisfald@gmail.com>"]
edition = "2021"
license = "MIT"
description = "HTTP configuration service by defining a struct."
documentation = "https://docs.rs/choices"
repository = "https://github.com/trisfald/choices"
keywords = ["configuration", "derive", "http"]
categories = ["web-programming"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package]
name = "choices"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[features]
default = []
json = ["serde_json", "choices-derive/json"]

[dependencies]
choices-derive = { path = "choices-derive", version = "=1.0.0" }
async-trait = "0.1"
tokio.workspace = true
warp = "0.3"
bytes = "1.2"
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
util = { path = "utilities" }
lazy_static = "1.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "user_type_json"
required-features = ["json"]

[[test]]
name = "json"
path = "tests/json/main.rs"
required-features = ["json"]
