[package]
name = "choices-derive"
version = "0.1.1"
authors = ["Trisfald <trisfald@gmail.com>"]
description = "HTTP configuration service by defining a struct, derive crate."
documentation = "https://docs.rs/choices-derive"
repository = "https://github.com/trisfald/choices"
keywords = ["configuration", "derive", "http"]
categories = ["web-programming"]
edition = "2018"
license = "MIT"

[features]
default = []
json = ["serde", "serde_json"]

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
derive-new = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[lib]
proc-macro = true
