[package]
name = "choices-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
json = ["serde", "serde_json"]

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
derive-new = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[lib]
proc-macro = true
